fixed issue with using tailwind plugin

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="border-t border-outline">
   <data href="{{ "/" | relative_url }}"></data>
 
-  <div class="wrapper p-4 sm:grid sm:grid-rows-3">
+  <div class="wrapper my-4 sm:grid sm:grid-rows-3">
 
     <h2 class="text-lg sm:row-start-1">{{ site.title | escape }}</h2>
 
