--- a/_layouts/playwright-branch-list.html
+++ b/_layouts/playwright-branch-list.html
@@ -1,3 +1,7 @@
+---
+layout: page
+---
+
 <div>
   <!-- Include the html snippet in `_includes/playwright-branch-list.html` -->
   {% include playwright-branch-list.html %}
