--- a/_layouts/playwright-branch.html
+++ b/_layouts/playwright-branch.html
@@ -4,8 +4,8 @@ layout: page
 
 <!-- get the run ids for the branch and sort them by newest to oldest -->
 {% assign unsorted_runs = "" | split: ',' %}
-{% for run_id in site.data.playwright-reports.branches[page.branch] %}
-  {% assign unsorted_runs = unsorted_runs | push: run_id %}
+{% for run in site.data.playwright-reports.branches[page.branch] %}
+  {% assign unsorted_runs = unsorted_runs | push: run[0] %}
 {% endfor %}
 
 {% assign run_ids = unsorted_runs | reverse %}
