fixing quotes, adding back missing layout

--- a/_includes/coverage-summary.html
+++ b/_includes/coverage-summary.html
@@ -37,7 +37,7 @@
   </div>
   <div class="flex justify-end mt-4 min-h-4">
     <!-- Liquid provides a helper method that will create the link relative to the baseurl set in _config.yml -->
-    <a href="{{ '/coverage' | relative_url }}" target="_blank">View Full Report</a>
+    <a href="{{ "/coverage" | relative_url }}" target="_blank">View Full Report</a>
   </div>
 {% else %}
   <!-- if the total was not included, display a message that there is nothing to display -->
