--- a/_includes/playwright-branch-list.html
+++ b/_includes/playwright-branch-list.html
@@ -12,7 +12,7 @@
     </div>
 
     <!-- get all of the run_ids in the branch, then reverse the list and get the first one -->
-    {% assign runs = "" | split: ',' %}
+    {% assign runs = "" | split: "," %}
     {% for run in site.data.playwright-reports.branches[branch_name] %}
       {% assign runs = runs | push: run[0] %}
     {% endfor %}
